# nemesisx00.github.io

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
assets/images/: dice-roller-godot-20sec-loop.webm
assets/js/: scroller.js
assets/video/: novas-run-teaser.webm
src/: data.rs  main.rs  util.rs
src/components/: app.rs  body.rs  head.rs  mod.rs  projects.rs  rain.rs  route.rs
src/components/cv/: data.rs  education.rs  experience.rs  head.rs  mod.rs  page.rs  portfolio.rs  skill.rs  summary.rs
stylus/: body.styl  cv.styl  head.styl  main.styl  mixins.styl  projects.styl
stylus/cv/: education.styl  experience.styl  head.styl  media.styl  portfolio.styl  skills.styl  summary.styl
stylus/media/: phone.styl  tablet.styl  tabletBig.styl
subprojects/novas-run/: next.config.js  package-lock.json  package.json  tsconfig.json
subprojects/novas-run/src/: gameLogic.ts  gameRenderer.ts  player.ts  spritesheet.ts  spritesheet.tsx  types.ts  types.tsx
subprojects/novas-run/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
subprojects/novas-run/src/components/: game.tsx
subprojects/novas-run/src/data/: levels.ts
