[package]
name = "nemesisx00-github-io"
version = "1.0.0"
authors = ["Peter Lunneberg"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "~0.4"
dioxus-router = "~0.4"
dioxus-web = "~0.4"
getrandom = { version = "~0", features = ["js"] }
log = "~0"
rand = { version = "~0", features = [ "alloc", "libc", "rand_chacha", "std" ] }
web-sys = { version = "0.3.65", features = [ "Window" ] }

# WebAssembly Debug
wasm-logger = "~0"
console_error_panic_hook = "~0"
