[package]
name = "nemesisx00-github-io"
version = "1.0.0"
authors = ["Peter Lunneberg"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-logger = "0.5"
getrandom = { version = "~0", features = ["js"] }
itertools = "0.13.0"
log = "~0"
rand = { version = "~0", features = [ "alloc", "libc", "rand_chacha", "std" ] }
tracing = "0.1.40"
web-sys = { version = "0.3.65", features = [ "Window" ] }

[lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"
